added lightgbm v1 training, feature pruning and lightgbm v2 training

--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a08fe79f-0504-44f7-b07f-0a3f517ca221",
    "metadata": {},
    "outputs": [],
@@ -143,13 +143,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import pyarrow\n",
     "\n",
     "pd.set_option(\"display.max_columns\", 200)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b6c887ad-249b-482a-9811-f21b85298fef",
    "metadata": {},
    "outputs": [],
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "335f7e75-1c36-41a9-b0c7-da69d26af3da",
    "metadata": {},
    "outputs": [
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0800f549-6bce-47ed-9e1c-be9c734159a6",
    "metadata": {},
    "outputs": [],
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4ed0408b-7961-4c68-8a31-354abd856404",
    "metadata": {},
    "outputs": [],
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "32c9a58f-391c-4e20-a9f6-9b118318a14a",
    "metadata": {},
    "outputs": [],
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f6f8a30c-93e1-4ab7-864d-e58f6d163b0e",
    "metadata": {},
    "outputs": [],
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "78b32b39-bf95-40d3-a51f-b118eb657e0d",
    "metadata": {},
    "outputs": [],
@@ -372,11 +373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2307622c-2ff0-4b2c-9c5e-5dc82d65a02a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X['isFraud'] = y\n",
+    "X.to_parquet(\"../data/processed/train_preprocessed.parquet\")"
+   ]
   },
   {
    "cell_type": "code",
