--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -308,60 +308,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "e8e9eea6-5325-4874-b08b-ddcc7dbecbbb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'model_name': 'lightgbm_baseline_v1',\n",
-       " 'objective': 'binary',\n",
-       " 'features_count': 393,\n",
-       " 'rows_count': 590540,\n",
-       " 'best_iteration_cv': 100,\n",
-       " 'cv_mean_auc': 0.9357796584431586,\n",
-       " 'cv_std_auc': 0.0034392402609496266,\n",
-       " 'holdout_valid_auc': np.float64(0.9666073658446053),\n",
-       " 'fraud_rate': np.float64(0.03499000914417313)}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "baseline_metadata = {\n",
-    "                     \"model_name\": \"lightgbm_baseline_v1\",\n",
-    "                     \"objective\": \"binary\",\n",
-    "                     \"features_count\": X.shape[1],\n",
-    "                     \"rows_count\": X.shape[0],\n",
-    "                     \"best_iteration_cv\": len(cv_results[auc_mean_key]),\n",
-    "                     \"cv_mean_auc\": cv_mean,\n",
-    "                     \"cv_std_auc\": cv_std,\n",
-    "                     \"holdout_valid_auc\": model.best_score[\"valid\"][\"auc\"],\n",
-    "                     \"fraud_rate\": y.mean()\n",
-    "                     }\n",
-    "\n",
-    "baseline_metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "5336e482-24b9-4f83-95fa-17b2d0192394",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "with open(\"../artifacts/baseline_v1.json\", \"w\") as f:\n",
-    "    json.dump(baseline_metadata, f, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "d9cfd0e5-520d-4976-a16e-bb0c7c3cd567",
    "metadata": {},
@@ -415,14 +361,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "3c938409-73aa-42fb-942e-b679bb2f9dc4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import roc_curve\n",
     "\n",
-    "fpr, tpr, thresholds = roc_curve(y_val, y_val_pred)"
+    "fpr, tpr, thresholds = roc_curve(y_val, y_val_pred)\n",
+    "auc_v1 = auc(fpr, tpr)"
    ]
   },
   {
@@ -545,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "5bbd6120-af06-459a-933c-ed77b9ff4b12",
    "metadata": {},
    "outputs": [
@@ -705,7 +652,7 @@
        "122                 V70  164767.390230  0.017693      0.547917"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "8d5739a7-fabc-44d2-ac35-dee600f57bfc",
    "metadata": {},
    "outputs": [],
@@ -749,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "80e4a1a8-31c3-4241-b552-6f08fdedad10",
    "metadata": {},
    "outputs": [],
@@ -760,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "e0e1ba64-fffb-492d-9ebb-c82129dc7c5f",
    "metadata": {},
    "outputs": [
@@ -770,7 +717,7 @@
        "133"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "ee62e028-9dfc-4450-9152-4026a4af8bea",
    "metadata": {},
    "outputs": [],
@@ -796,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "3bb99173-ed3a-4d81-83a5-865abbee2ebe",
    "metadata": {},
    "outputs": [
@@ -818,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "51f8d6ca-11b7-4af8-ba0d-a2c0e4cb56d0",
    "metadata": {},
    "outputs": [],
@@ -874,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "2521c6fe-0eb7-4638-b381-8bd39ac08833",
    "metadata": {},
    "outputs": [],
@@ -895,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "56d424b2-3ede-43a4-967d-f450f82e514b",
    "metadata": {},
    "outputs": [],
@@ -918,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "8549970a-ea9e-4ac0-bf14-bce710524179",
    "metadata": {},
    "outputs": [
@@ -945,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "aff2d18e-9e02-443d-937d-a03ab92f3fc2",
    "metadata": {},
    "outputs": [],
@@ -956,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "0c495df8-f58e-40d4-af44-e4587dd9e758",
    "metadata": {},
    "outputs": [
@@ -966,7 +913,7 @@
        "0.965171801580769"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "934f2235-4649-4778-b125-7747ade35684",
    "metadata": {},
    "outputs": [
@@ -992,7 +939,7 @@
        "(np.float64(0.7665134285022985), np.float64(0.7248971691265425))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "f595ac50-09ca-460a-8145-5134ba281664",
    "metadata": {},
    "outputs": [
@@ -1022,7 +969,7 @@
        "np.float64(0.1399156882001524)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,25 +992,6 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "e0842b7c-a725-499c-ba20-1cbab411be8f",
-   "metadata": {},
-   "source": [
-    "### Model v1 vs v2 Comparison\n",
-    "\n",
-    "Feature pruning reduced the feature space from 393 to 133 features while\n",
-    "improving fraud detection performance under operational constraints.\n",
-    "\n",
-    "- Recall @ 1% FPR improved from 0.748 → 0.767\n",
-    "- Recall @ 0.5% FPR improved from 0.680 → 0.725\n",
-    "- Model became more efficient and less sensitive to noise\n",
-    "\n",
-    "Conclusion:\n",
-    "Feature pruning improved both performance and deployability,\n",
-    "making v2 the preferred production candidate.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "79aabb9c-fb87-496a-87c7-489fcb19f7d6",
@@ -1073,78 +1001,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "138ad593-899e-4be6-98fd-fbd1a9cee06d",
+   "execution_count": null,
+   "id": "a6275e04-690b-4005-a94d-bf770b9b3d04",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a510079-2c96-4232-909c-6b79f3dff77e",
+   "metadata": {},
    "source": [
-    "v2_metadata = {\n",
-    "    \"model_version\": \"v2\",\n",
-    "    \"feature_count\": 133,\n",
-    "    \"features\": selected_features,\n",
-    "    \"auc\": auc_v2,\n",
-    "    \"optimal_threshold\": optimal_threshold_v2,\n",
-    "    \"notes\": \"Leakage removed + pruning v2\"\n",
-    "}\n"
+    "## KS computation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "45e8a4fc-0312-4fce-887c-b52accf4a489",
+   "execution_count": 39,
+   "id": "926ac016-1e4a-4e9d-9189-b377234f122b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../artifacts/v2_pruned_metadata.json\", \"w\") as f:\n",
-    "    json.dump(v2_metadata, f, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "7c24e771-9fb4-4f73-8ce2-1d746718a884",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<lightgbm.basic.Booster at 0x21c7163c050>"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.save_model(\"../artifacts/lightgbm_v1_baseline.json\")"
+    "#Defining KS function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "9f436894-f9a7-4b60-9d2a-f81e884b2c29",
+   "id": "5e648d88-f8b9-458f-b4d7-d8843debe404",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_ks(y_true, y_pred):\n",
+    "    fpr, tpr, _ = roc_curve(y_true, y_pred)\n",
+    "    ks = np.max(tpr - fpr)\n",
+    "    return ks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "9354150c-0250-4d04-849e-f7539444c96a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<lightgbm.basic.Booster at 0x21cbf66dd00>"
+       "(np.float64(0.8222664745533027), np.float64(0.8226558825182447))"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Computing KS for both versions\n",
+    "ks_v1 = compute_ks(y_val, y_val_pred)\n",
+    "ks_v2 = compute_ks(y_val, y_val_pred_v2)\n",
+    "\n",
+    "ks_v1, ks_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "928868ea-ae0f-4576-b760-23908924dd21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "85939256-bb3f-4045-a107-a4b09299cffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model_name': 'lightgbm_v1_baseline',\n",
+       " 'num_features': 393,\n",
+       " 'auc': 0.9666073658446053,\n",
+       " 'ks': np.float64(0.8222664745533027),\n",
+       " 'recall_at_1pct_fpr': np.float64(0.7483668037744979),\n",
+       " 'recall_at_05pct_fpr': np.float64(0.6801354947979675),\n",
+       " 'optimal_threshold': 0.6965208896677066,\n",
+       " 'fraud_rate': 0.03499000914417313,\n",
+       " 'training_rows': 590540,\n",
+       " 'notes': 'Baseline LightGBM using full feature set'}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baseline_v1_metadata = {\n",
+    "                    \"model_name\": \"lightgbm_v1_baseline\",\n",
+    "                    \"num_features\": X.shape[1],\n",
+    "                    \"auc\": auc_v1,\n",
+    "                    \"ks\": ks_v1,\n",
+    "                    \"recall_at_1pct_fpr\": recall_1pct,\n",
+    "                    \"recall_at_05pct_fpr\": recall_05pct,\n",
+    "                    \"optimal_threshold\": float(optimal_threshold),\n",
+    "                    \"fraud_rate\": float(y.mean()),\n",
+    "                    \"training_rows\": int(len(y)),\n",
+    "                    \"notes\": \"Baseline LightGBM using full feature set\"\n",
+    "                       }\n",
+    "baseline_v1_metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "295fe074-b729-4f23-9d29-c47b33c8d7d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8492da32-359c-4d86-a839-fa32731514a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model_name': 'lightgbm_v2_pruned',\n",
+       " 'num_features': 133,\n",
+       " 'auc': 0.965171801580769,\n",
+       " 'ks': np.float64(0.8226558825182447),\n",
+       " 'recall_at_1pct_fpr': np.float64(0.7665134285022985),\n",
+       " 'recall_at_05pct_fpr': np.float64(0.7248971691265425),\n",
+       " 'optimal_threshold': 0.1399156882001524,\n",
+       " 'fraud_rate': 0.03499000914417313,\n",
+       " 'training_rows': 590540,\n",
+       " 'notes': 'LightGBM after feature pruning v2'}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baseline_v2_metadata = {\n",
+    "                    \"model_name\": \"lightgbm_v2_pruned\",\n",
+    "                    \"num_features\": X_v2.shape[1],\n",
+    "                    \"auc\": auc_v2,\n",
+    "                    \"ks\": ks_v2,\n",
+    "                    \"recall_at_1pct_fpr\": recall_1pct_v2,\n",
+    "                    \"recall_at_05pct_fpr\": recall_05pct_v2,\n",
+    "                    \"optimal_threshold\": float(optimal_threshold_v2),\n",
+    "                    \"fraud_rate\": float(y.mean()),\n",
+    "                    \"training_rows\": int(len(y)),\n",
+    "                    \"notes\": \"LightGBM after feature pruning v2\"\n",
+    "                      }\n",
+    "baseline_v2_metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "239580ea-39c9-49de-ad3f-077a5ece98ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "3b1171a5-22b8-4e71-8614-7209dc2551b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lightgbm.basic.Booster at 0x1e6d749dd00>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Save metadata\n",
+    "with open(\"../artifacts/baseline_v1.json\", \"w\") as f:\n",
+    "    json.dump(baseline_v1_metadata, f, indent=4)\n",
+    "\n",
+    "with open(\"../artifacts/v2_pruned_metadata.json\", \"w\") as f:\n",
+    "    json.dump(baseline_v2_metadata, f, indent=4)\n",
+    "\n",
+    "# Save models\n",
+    "model.save_model(\"../artifacts/lightgbm_v1_baseline.json\")\n",
     "model_v2.save_model(\"../artifacts/lightgbm_v2_pruned.json\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6275e04-690b-4005-a94d-bf770b9b3d04",
+   "id": "81b44df2-0386-40aa-9785-b6c2db75cbf5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3561a429-3bc8-480c-ab63-7409965a7fc3",
+   "metadata": {},
+   "source": [
+    "## Model v1 vs v2 Comparison\n",
+    "\n",
+    "- Feature pruning reduced the feature space from 393 to 133 features, leading to better operational performance while preserving the model’s overall ranking power.\n",
+    "\n",
+    "* Performance Comparison\n",
+    "\n",
+    "  - Recall @ 1% FPR\n",
+    "\n",
+    "    - v1: 0.748\n",
+    "\n",
+    "    - v2: 0.767\n",
+    "\n",
+    "  - Recall @ 0.5% FPR\n",
+    "\n",
+    "    - v1: 0.680\n",
+    "\n",
+    "    - v2: 0.725\n",
+    "\n",
+    "   - KS Statistic\n",
+    "\n",
+    "     - v1: 0.8223\n",
+    "\n",
+    "     - v2: 0.8227\n",
+    "\n",
+    "The KS statistic remained stable across both versions, indicating that overall class separation and ranking power were preserved after feature pruning.\n",
+    "\n",
+    "* Interpretation\n",
+    "\n",
+    "  - Feature pruning did not degrade global discrimination (stable KS).\n",
+    "\n",
+    "  - At the same time, it improved recall at business-critical operating points (fixed FPR).\n",
+    "\n",
+    "  - This suggests that pruning removed noisy or redundant features while retaining the most predictive signals.\n",
+    "\n",
+    "* Conclusion\n",
+    "\n",
+    "  - Feature pruning improved model efficiency, robustness, and deployability without sacrificing ranking quality.\n",
+    "  - Given its higher recall under operational constraints, reduced feature complexity, and comparable KS, v2 is the preferred production candidate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b120f0fd-35a6-4e85-b648-f186f52fe5c1",
    "metadata": {},
    "outputs": [],
    "source": []
