Complete model inference flow with feature schema validation

--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -50,8 +50,7 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\shubh\\OneDrive\\Documents\\GitHub\\Ai projects\\fraud-detection-ml-system\\myenv\\Lib\\site-packages\\mlflow\\tracking\\_tracking_service\\utils.py:178: FutureWarning: The filesystem tracking backend (e.g., './mlruns') will be deprecated in February 2026. Consider transitioning to a database backend (e.g., 'sqlite:///mlflow.db') to take advantage of the latest MLflow features. See https://github.com/mlflow/mlflow/issues/18534 for more details and migration guidance. For migrating existing data, https://github.com/mlflow/mlflow-export-import can be used.\n",
-      "  return FileStore(store_uri, store_uri)\n",
-      "2026/01/19 20:11:35 INFO mlflow.tracking.fluent: Experiment with name 'fraud_detection_lightgbm' does not exist. Creating a new experiment.\n"
+      "  return FileStore(store_uri, store_uri)\n"
      ]
     },
     {
@@ -127,7 +126,8 @@
     "]\n",
     "\n",
     "for col in cat_cols:\n",
-    "    X[col] = X[col].astype(\"category\")\n"
+    "    if col in X.columns:\n",
+    "        X[col] = X[col].astype(\"category\")\n"
    ]
   },
   {
@@ -216,6 +216,26 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "74b27442-374d-48a4-b252-b7180ec755f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "schema_dir = Path(\"../artifacts/schema\")\n",
+    "schema_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "schema_v1 = {\n",
+    "    \"features\": X.columns.tolist(),\n",
+    "    \"categorical_features\": cat_cols\n",
+    "}\n",
+    "\n",
+    "with open(schema_dir / \"lightgbm_v1_schema.json\", \"w\") as f:\n",
+    "    json.dump(schema_v1, f, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "d3cfe230-6bb1-43b2-9c4c-627b671979c6",
    "metadata": {},
    "outputs": [
@@ -250,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8f0723fa-7038-4141-953c-abb9b750afad",
    "metadata": {},
    "outputs": [
@@ -279,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a969ab31-fae1-4060-83a0-10e826d95deb",
    "metadata": {},
    "outputs": [
@@ -289,7 +309,7 @@
        "dict_keys(['valid auc-mean', 'valid auc-stdv'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0edd247d-8aae-4f59-9ef7-f04971912c0d",
    "metadata": {
     "scrolled": true
@@ -312,7 +332,7 @@
        "(0.9357796584431586, 0.0034392402609496266)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "bac7a15f-6595-40fb-88b9-02bc25934d6c",
    "metadata": {},
    "outputs": [],
@@ -373,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c1c9c914-6dc8-47c0-9085-e98821c908a4",
    "metadata": {},
    "outputs": [],
@@ -391,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "3c938409-73aa-42fb-942e-b679bb2f9dc4",
    "metadata": {},
    "outputs": [],
@@ -404,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7201d1d9-0f21-4a6f-b651-995ef01789b1",
    "metadata": {},
    "outputs": [
@@ -431,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "6a0e37d3-5118-47cb-adb4-00893fb210f9",
    "metadata": {},
    "outputs": [
@@ -441,7 +461,7 @@
        "(np.float64(0.7483668037744979), np.float64(0.6801354947979675))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "d956ff79-a5be-4d89-9ac7-9150ee2c92aa",
    "metadata": {},
    "outputs": [
@@ -472,7 +492,7 @@
        "np.float64(0.696520916315476)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "5bbd6120-af06-459a-933c-ed77b9ff4b12",
    "metadata": {},
    "outputs": [
@@ -682,7 +702,7 @@
        "122                 V70  164767.390230  0.017693      0.547921"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "8d5739a7-fabc-44d2-ac35-dee600f57bfc",
    "metadata": {},
    "outputs": [],
@@ -726,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "80e4a1a8-31c3-4241-b552-6f08fdedad10",
    "metadata": {},
    "outputs": [],
@@ -737,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "e0e1ba64-fffb-492d-9ebb-c82129dc7c5f",
    "metadata": {},
    "outputs": [
@@ -747,7 +767,7 @@
        "133"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "ee62e028-9dfc-4450-9152-4026a4af8bea",
    "metadata": {},
    "outputs": [],
@@ -773,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "3bb99173-ed3a-4d81-83a5-865abbee2ebe",
    "metadata": {},
    "outputs": [
@@ -795,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "51f8d6ca-11b7-4af8-ba0d-a2c0e4cb56d0",
    "metadata": {},
    "outputs": [],
@@ -851,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "2521c6fe-0eb7-4638-b381-8bd39ac08833",
    "metadata": {},
    "outputs": [],
@@ -872,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "56d424b2-3ede-43a4-967d-f450f82e514b",
    "metadata": {},
    "outputs": [],
@@ -895,7 +915,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
+   "id": "190d6cd2-e1af-4875-aa72-bc2cce7398c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema_v2 = {\n",
+    "    \"features\": X_v2.columns.tolist(),\n",
+    "    \"categorical_features\": X_v2.select_dtypes(include=['category']).columns.tolist()\n",
+    "}\n",
+    "\n",
+    "with open(schema_dir / \"lightgbm_v2_schema.json\", \"w\") as f:\n",
+    "    json.dump(schema_v2, f, indent=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "8549970a-ea9e-4ac0-bf14-bce710524179",
    "metadata": {},
    "outputs": [
@@ -922,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "aff2d18e-9e02-443d-937d-a03ab92f3fc2",
    "metadata": {},
    "outputs": [],
@@ -933,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "0c495df8-f58e-40d4-af44-e4587dd9e758",
    "metadata": {},
    "outputs": [
@@ -943,7 +979,7 @@
        "0.965171801580769"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "934f2235-4649-4778-b125-7747ade35684",
    "metadata": {},
    "outputs": [
@@ -969,7 +1005,7 @@
        "(np.float64(0.7665134285022985), np.float64(0.7248971691265425))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "f595ac50-09ca-460a-8145-5134ba281664",
    "metadata": {},
    "outputs": [
@@ -999,7 +1035,7 @@
        "np.float64(0.1399156882001524)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "926ac016-1e4a-4e9d-9189-b377234f122b",
    "metadata": {},
    "outputs": [],
@@ -1057,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "5e648d88-f8b9-458f-b4d7-d8843debe404",
    "metadata": {},
    "outputs": [],
@@ -1070,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "9354150c-0250-4d04-849e-f7539444c96a",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1116,7 @@
        "(np.float64(0.8222664745533027), np.float64(0.8226558825182447))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "85939256-bb3f-4045-a107-a4b09299cffc",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1158,7 @@
        " 'notes': 'Baseline LightGBM using full feature set'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "8492da32-359c-4d86-a839-fa32731514a9",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1208,7 @@
        " 'notes': 'LightGBM after feature pruning v2'}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,17 +1239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "3b1171a5-22b8-4e71-8614-7209dc2551b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<lightgbm.basic.Booster at 0x2a2f1b085a0>"
+       "<lightgbm.basic.Booster at 0x1dc6bbcdf20>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "ebd8de35-5ea0-44b5-8f3e-ad75e1110cf7",
    "metadata": {},
    "outputs": [],
@@ -1314,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "7d64b351-9841-4c0a-aa92-eeca62041ff1",
    "metadata": {},
    "outputs": [],
@@ -1362,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "c38d0d0e-f04f-4716-96ca-9b56f304757e",
    "metadata": {},
    "outputs": [],
@@ -1388,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "c198e480-96b8-4e94-8dcf-113dd032143a",
    "metadata": {},
    "outputs": [],
